RESOLVED FIXED92570
[Chromium] Web Inspector: Win Dbg tests timing out (r123556 or r123560?)
https://bugs.webkit.org/show_bug.cgi?id=92570
Summary [Chromium] Web Inspector: Win Dbg tests timing out (r123556 or r123560?)
Peter Kasting
Reported 2012-07-27 22:04:22 PDT
At least the following tests all began timing out on the Chromium Windows debug canary bot at the same time: inspector/debugger/dom-breakpoints.html (consistently) inspector/timeline/timeline-network-received-data.html (usually) inspector/timeline/timeline-start-time.html (sometimes) The regression range is WebKit r123556-r123563: http://trac.webkit.org/log/?verbose=on&rev=123563&stop_rev=123556 Or Chromium r148262-148277: http://build.chromium.org/f/chromium/perf/dashboard/ui/changelog.html?url=/trunk/src&mode=html&range=148277:148262 See flakiness dashboard link: http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=inspector%2Fdebugger%2Fdom-breakpoints.html%2Cinspector%2Ftimeline%2Ftimeline-network-received-data.html%2Cinspector%2Ftimeline%2Ftimeline-start-time.html The Chromium commits look harmless to me. The most obvious culprits seem like http://trac.webkit.org/changeset/123556 and http://trac.webkit.org/changeset/123560 . CCed those patch authors. Sending to pfeldman for initial triage, anyone else who knows the area feel free to take.
Attachments
Patch (2.53 KB, patch)
2012-07-30 11:50 PDT, Kenneth Russell
no flags
Patch for landing (2.57 KB, patch)
2012-08-03 11:46 PDT, Kenneth Russell
no flags
Kenneth Russell
Comment 1 2012-07-30 11:50:52 PDT
Kenneth Russell
Comment 2 2012-07-30 11:51:45 PDT
I can believe that my patch http://trac.webkit.org/changeset/123556 could be the culprit. Here's a patch that should avoid having it affect these Inspector tests; shall we land this and see whether it clears up the timeouts?
Pavel Feldman
Comment 3 2012-08-02 11:53:01 PDT
Comment on attachment 155331 [details] Patch Do you have anyone to stamp this change? I can do that in case it is safe and you provide a brief explanation on why it is so. Thanks.
Kenneth Russell
Comment 4 2012-08-02 16:47:51 PDT
It restricts the earlier heuristics which force full GCs to only apply to pages using WebGL, not pages using 2D canvas contexts. This is sufficient for our needs at the moment, and I think will clear up the Inspector timeouts if those pages are using 2D canvas.
WebKit Review Bot
Comment 5 2012-08-02 23:10:23 PDT
Comment on attachment 155331 [details] Patch Rejecting attachment 155331 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ueue/ Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/bindings/v8/custom/V8HTMLCanvasElementCustom.cpp Hunk #1 FAILED at 87. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/bindings/v8/custom/V8HTMLCanvasElementCustom.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Pavel Feld..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output: http://queues.webkit.org/results/13424550
Kenneth Russell
Comment 6 2012-08-03 11:46:18 PDT
Created attachment 156426 [details] Patch for landing
WebKit Review Bot
Comment 7 2012-08-03 14:19:52 PDT
Comment on attachment 156426 [details] Patch for landing Clearing flags on attachment: 156426 Committed r124653: <http://trac.webkit.org/changeset/124653>
WebKit Review Bot
Comment 8 2012-08-03 14:19:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.