[Chromium] Web Inspector: Win Dbg tests timing out (r123556 or r123560?) https://bugs.webkit.org/show_bug.cgi?id=92570

Reviewed by Pavel Feldman.

Try restricting the use of the GC hint for canvas contexts to only
WebGL contexts, where it is most needed, to see whether this
clears up the timeouts.

* bindings/v8/custom/V8HTMLCanvasElementCustom.cpp:
(WebCore::V8HTMLCanvasElement::getContextCallback):


Canonical link: https://commits.webkit.org/110999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124653 268f45cc-cd09-0410-ab3c-d52691b4dbfc